--- a/webserver/index.html
+++ b/webserver/index.html
@@ -20,7 +20,7 @@ EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 
 crossorigin="anonymous"> 
 
- <Ɵtle>Web Server</Ɵtle>
+ <title>Web Server</title>
 
  </head>
  <body>
