--- a/soaldnsxi/index.html
+++ b/soaldnsxi/index.html
@@ -14,8 +14,8 @@
 
   
   <body>
-  
-  <h1>Soal Dns Hal 21</h1>
+  <h1>SOAL DOMAIN NAME SYSTEM</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <hr>
     <p>
     1. Jenis-jenis sistem operasi jaringan yang dapat digunakan sebagal server dalam jaringan adalah sebagai berikut, kecuali<br>
